再次测试一次

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,10 +7,10 @@ on:
 
 
 env:
-  ALIYUN_REGISTRY: "${{ secrets.ALIYUN_REGISTRY }}"
-  ALIYUN_NAME_SPACE: "${{ secrets.ALIYUN_NAME_SPACE }}"
-  ALIYUN_REGISTRY_USER: "${{ secrets.ALIYUN_REGISTRY_USER }}"
-  ALIYUN_REGISTRY_PASSWORD: "${{ secrets.ALIYUN_REGISTRY_PASSWORD }}"
+  ALIYUN_REGISTRY: "crpi-9dowluvnp1etbqhq.cn-hangzhou.personal.cr.aliyuncs.com"
+  ALIYUN_NAME_SPACE: "myself_repo"
+  ALIYUN_REGISTRY_USER: "cat_1010"
+  ALIYUN_REGISTRY_PASSWORD: "lx991074"
 
 jobs:
 
